[gd_scene load_steps=2 format=3 uid="uid://cqj8x3h4n5m2p"]

[ext_resource type="Script" path="res://PrestigeUI.gd" id="1"]

[node name="PrestigeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.15, 0.3, 0.95)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 28
text = "PRESTIGE"
horizontal_alignment = 1

[node name="TopPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 70.0
offset_right = 300.0
offset_bottom = 110.0
grow_horizontal = 2
alignment = 1

[node name="PointsLabel" type="Label" parent="TopPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Prestige Points: 0"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="TopPanel"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="AscendButton" type="Button" parent="TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Ascend (Level 10+)"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradesVBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"
